Fix responsive layout issues, and background attachement issue

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -76,7 +76,7 @@ body {
 }
 
 .body-colors {
-  @apply bg-gradient-to-bl from-accent to-background text-foreground from-0% to-40%  selection:bg-blue-500 selection:text-white;
+  @apply bg-gradient-to-bl from-accent to-background text-foreground from-0% to-40%  selection:bg-blue-500 selection:text-white bg-no-repeat bg-fixed;
 }
 
 a {
